--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,10 @@ dependencies {
 	// H2
 	runtimeOnly 'com.h2database:h2'
 
+	//타입리프 레이아웃
+	//implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
+
+
 }
 
 tasks.named('test') {
