--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 server:
   port:
-    8090
+    8091
 spring:
   datasource:
     url: jdbc:h2:mem:eco-reading
@@ -10,6 +10,13 @@ spring:
   h2:
     console:
       enabled: true
+
+  thymeleaf:
+    prefix: classpath:templates/
+    check-template-location: true
+    suffix: .html
+    mode: HTML
+    cache: false # default true, ?? ??? false? ?? ?? ??
 
     jpa:
       hibernate:
