ignore & feature: book search

--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,10 @@ dependencies {
 	//security
 	testImplementation 'org.springframework.security:spring-security-test'
 
+	//s3 access
+	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+
+
 	// H2
 	runtimeOnly 'com.h2database:h2'
 
