--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,3 +24,15 @@ spring:
           show_sql: true
 
 
+cloud:
+  aws:
+    s3:
+      bucket: eco-reading-image-bucket
+    stack:
+      auto: false
+    region:
+      static: ap-northeast-2
+    credentials:
+      accessKey: AKIA2D2KRCMY4DWJKIU7
+      secretKey: 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
+
