--- a/build.gradle
+++ b/build.gradle
@@ -60,11 +60,16 @@ dependencies {
 	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
 	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2'
 
+	//gson
+	implementation 'com.google.code.gson:gson:2.8.9'
+
 	//OAuth2
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 
 	//mysql
 	implementation 'mysql:mysql-connector-java:8.0.29'
+
+
 
 }
 
