자동배포 deploy.yml 파일 작성

--- a/build.gradle
+++ b/build.gradle
@@ -86,4 +86,7 @@ tasks.named('test') {
 	useJUnitPlatform()
 }
 
-
+// jar 파일 만들 때 MANIFEST.MF 파일 중복되어서 코드 추가
+bootJar {
+	duplicatesStrategy = 'exclude'
+}
