--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,10 +30,12 @@ jobs:
           distribution: 'temurin'
 
       - name: Grant execute permission for gradlew
+        working-directory: ./server-app
         run: chmod +x ./gradlew
         shell: bash
 
       - name: Build with Gradle
+        working-directory: ./server-app
         run: ./gradlew clean build
         shell: bash
 
