--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,9 +11,7 @@ on:
   push:
     branches:
       - master
-
-permissions:
-  contents: read
+  workflow_dispatch:
 
 jobs:
   build:
@@ -30,12 +28,10 @@ jobs:
           distribution: 'temurin'
 
       - name: Grant execute permission for gradlew
-        working-directory: ./eco_reading
         run: chmod +x ./gradlew
         shell: bash
 
       - name: Build with Gradle
-        working-directory: ./eco_reading
         run: ./gradlew clean build
         shell: bash
 
@@ -52,6 +48,7 @@ jobs:
           cp build/libs/*.jar deploy/application.jar
           cp Procfile deploy/Procfile
           cp -r .ebextensions deploy/.ebextensions
+          cp -r .platform deploy/.platform
           cd deploy && zip -r deploy.zip .
 
       - name: Deploy to EB
