--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,11 +28,11 @@ jobs:
           distribution: 'temurin'
 
       - name: Grant execute permission for gradlew
-        run: chmod +x ./gradlew
+        run: chmod +x .\gradlew
         shell: bash
 
       - name: Build with Gradle
-        run: ./gradlew clean build
+        run: .\gradlew clean build
         shell: bash
 
       - name: Get current time
