--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,8 +16,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    steps:
 
+    steps:
       - name: Checkout source code
         uses: actions/checkout@v3
 
@@ -25,14 +25,13 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: '11'
-          distribution: 'temurin'
 
       - name: Grant execute permission for gradlew
-        run: chmod +x .\gradlew
+        run: chmod +x ./gradlew
         shell: bash
 
       - name: Build with Gradle
-        run: .\gradlew clean build
+        run: ./gradlew clean build
         shell: bash
 
       - name: Get current time
