--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,19 +21,18 @@ jobs:
       - name: Checkout source code
         uses: actions/checkout@v3
 
-      - name: Set up JDK 11
+      - name: Set up JDK 11  # JDK 설치
         uses: actions/setup-java@v3
         with:
           java-version: '11'
           distribution: 'temurin'
 
-      - name: Grant execute permission for gradlew
+      - name: Grant execute permission for gradlew  # gradle 실행 권한 설정
         run: chmod +x ./gradlew
         shell: bash
 
       - name: Build with Gradle
         run: ./gradlew clean build
-        working-directory: ./eco_reading
         shell: bash
 
       - name: Get current time
