--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,11 +29,11 @@ jobs:
 
       - name: Grant execute permission for gradlew  # gradle 실행 권한 설정
         run: chmod +x ./gradlew
-        shell: bash
 
       - name: Build with Gradle
-        run: ./gradlew clean build
-        shell: bash
+        uses: gradle/gradle-build-action@bd5760595778326ba7f1441bcf7e88b49de61a25 # v2.6.0
+        with:
+          arguments: build
 
       - name: Get current time
         uses: 1466587594/get-current-time@v2
