--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
           java-version: '11'
           distribution: 'temurin'
 
-      - name: make application yml
+      - name: make application yml  # application.yml 생성성
         run: |
           cd ./src/main/resources
           touch ./application.yml
