--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
           java-version: '11'
           distribution: 'temurin'
 
-      - name: make application yml  # application.yml 생성성
+      - name: make application yml  # application.yml 생성
         run: |
           cd ./src/main/resources
           touch ./application.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Grant execute permission for gradlew  # gradle 실행 권한 설정
         run: chmod +x ./gradlew
 
-      - name: Build with Gradle
+      - name: Build with Gradle  # gradle 설치
         uses: gradle/gradle-build-action@bd5760595778326ba7f1441bcf7e88b49de61a25 # v2.6.0
         with:
           arguments: build
@@ -48,10 +48,10 @@ jobs:
           format: YYYY-MM-DDTHH-mm-ss
           utcOffset: "+09:00"
 
-      - name: Generate deployment package
+      - name: Generate deployment package  # jar 압축 파일 생성 
         run: zip -r deploy.zip . -x '*.git*'
 
-      - name: Deploy to EB
+      - name: Deploy to EB  # AWS Beanstalk 로 자동 배포 
         uses: einaregilsson/beanstalk-deploy@v21
         with:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
